# Freelance-Proposal-Writer

./: README.md  pyproject.toml
output/: proposal.md
src/proposal_writer/: crew.py  main.py  streamlit-frontend.py
src/proposal_writer/config/: agents.yaml  tasks.yaml
src/proposal_writer/tools/: timeline_validator.py
