[project]
name = "proposal_writer"
version = "0.1.0"
description = "Proposal_Writer using crewAI"
authors = [{ name = "Ashna", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "streamlit>=1.57.0",
]

[project.scripts]
proposal_writer = "proposal_writer.main:run"
run_crew = "proposal_writer.main:run"
train = "proposal_writer.main:train"
replay = "proposal_writer.main:replay"
test = "proposal_writer.main:test"
run_with_trigger = "proposal_writer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
